update payment api and swagger
