# src/controllers/order.controller.ts
@@ -70,6 +70,11 @@ class OrderController {
     const payload: OrderUpdateRequest = req.body;
     res.send(await orderService.updateOrder(billId, orderId, payload));
   }
+
+  async CompleteOrder(req: Request, res: Response) {
+    const { billId, orderId } = req.params;
+    res.send(await orderService.CompleteOrder(billId, orderId));
+  }
 }
 
 const orderController = new OrderController();
